Feat(#5): 프로젝트 이슈 구현 최종 수정