@@ -14,6 +14,7 @@ import org.mockito.Mock;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -24,6 +25,7 @@ import static org.mockito.Mockito.*;
 
 @SpringBootTest
 class ProjectIssueServiceImplTest {
+
     @Mock
     private ProjectIssueRepository projectIssueRepository;
 
@@ -37,11 +39,7 @@ class ProjectIssueServiceImplTest {
     private ProjectIssue issue1, issue2, issue3;
 
     @BeforeEach
-    @Test
     void setUp() {
-        testProject = new Project();
-        testProject.setId(1L);
-
         testProject = new Project();
         testProject.setId(1L);
 
@@ -55,7 +53,7 @@ class ProjectIssueServiceImplTest {
         User user3 = new User();
         user3.setUsername("사용자3");
 
-        // 날짜 변환
+        // 날짜 설정
         LocalDate startDate1 = LocalDate.of(2025, 1, 11);
         LocalDate endDate1 = LocalDate.of(2025, 1, 20);
 
@@ -65,76 +63,65 @@ class ProjectIssueServiceImplTest {
         LocalDate startDate3 = LocalDate.of(2025, 1, 10);
         LocalDate endDate3 = LocalDate.of(2025, 1, 18);
 
-        // 수정된 이슈 생성
+        // 이슈 생성
         issue1 = createIssue(1L, "이슈 1", user1, ProjectIssuePriority.HIGH, ProjectIssueStatus.INPROGRESS, startDate1, endDate1);
         issue2 = createIssue(2L, "이슈 2", user2, ProjectIssuePriority.LOW, ProjectIssueStatus.INPROGRESS, startDate2, endDate2);
         issue3 = createIssue(3L, "이슈 3", user3, ProjectIssuePriority.MIDDLE, ProjectIssueStatus.YET, startDate3, endDate3);
     }
 
-    // createIssue 메소드
-    private ProjectIssue createIssue(long issueId, String issueName, User manager, ProjectIssuePriority projectPriority, ProjectIssueStatus projectStatus, LocalDate startLine, LocalDate deadLine) {
+    private ProjectIssue createIssue(long issueId, String issueName, User manager, ProjectIssuePriority priority, ProjectIssueStatus status, LocalDate startLine, LocalDate deadLine) {
         ProjectIssue issue = new ProjectIssue();
-
         issue.setId(issueId);
         issue.setIssueName(issueName);
         issue.setManager(manager);
-        issue.setPriority(projectPriority);
-        issue.setStatus(projectStatus);
+        issue.setPriority(priority);
+        issue.setStatus(status);
         issue.setStartline(startLine);
         issue.setDeadline(deadLine);
-
         return issue;
     }
 
+    // ✅ 정렬된 이슈 목록 조회 테스트
     @Test
     void testList() {
-        when(projectIssueRepository.findByProjectId(3L)).thenReturn(List.of(issue1, issue2));
+        when(projectIssueRepository.findByProjectIdSorted(1L)).thenReturn(Arrays.asList(issue1, issue2, issue3));
 
-        List<ProjectIssue> issues = projectIssueService.listByProjectId(3L);
+        List<ProjectIssue> result = projectIssueService.listByProjectId(1L);
 
-        assertThat(issues).hasSize(2);
-        assertThat(issues.get(0).getIssueName()).isEqualTo("이슈 1");
-        assertThat(issues.get(1).getIssueName()).isEqualTo("이슈 2");
-        verify(projectIssueRepository, times(1)).findByProjectId(3L);
+        assertThat(result).isNotEmpty();
+        assertThat(result).containsExactly(issue3, issue1, issue2); // 정렬 순서 검증
+        verify(projectIssueRepository, times(1)).findByProjectIdSorted(1L);
     }
 
+    // ✅ 이슈 수정 테스트
     @Test
     void testUpdate() {
+        User newUser = new User();
+        newUser.setUsername("새로운 사용자");
 
-        // User 객체 생성
-        User user1 = new User();
-        user1.setUsername("사용자1");
-
-        User user2 = new User();
-        user2.setUsername("사용자4");
-
-        User user3 = new User();
-        user3.setUsername("사용자3");
-
-        // 날짜 변환
-        LocalDate startDate1 = LocalDate.of(2025, 1, 11);
-        LocalDate endDate1 = LocalDate.of(2025, 1, 20);
-
-        ProjectIssue updatedIssue = createIssue(1L, "수정된 이슈 1", user2 , ProjectIssuePriority.MIDDLE, ProjectIssueStatus.YET, startDate1, endDate1 );
+        ProjectIssue updatedIssue = createIssue(1L, "수정된 이슈 1", newUser, ProjectIssuePriority.MIDDLE, ProjectIssueStatus.YET, LocalDate.of(2025, 1, 11), LocalDate.of(2025, 1, 20));
 
         when(projectIssueRepository.findById(issue1.getId())).thenReturn(Optional.of(issue1));
 
-        int result = projectIssueService.update(3L, issue1.getId(), updatedIssue);
+        int result = projectIssueService.update(1L, issue1.getId(), updatedIssue);
 
         assertThat(result).isEqualTo(1);
         assertThat(issue1.getIssueName()).isEqualTo("수정된 이슈 1");
+        assertThat(issue1.getManager()).isEqualTo(newUser);
         verify(projectIssueRepository, times(1)).save(issue1);
     }
 
+    // ✅ 이슈 삭제 테스트
     @Test
     void testDelete() {
-        when(projectIssueRepository.existsById(issue1.getId())).thenReturn(true);
-        doNothing().when(projectIssueRepository).deleteById(issue1.getId());
+        List<Long> issueIds = Arrays.asList(issue1.getId(), issue2.getId());
+        List<ProjectIssue> issues = Arrays.asList(issue1, issue2);
 
-        int result = projectIssueService.deleteById(issue1.getId());
+        when(projectIssueRepository.findAllById(issueIds)).thenReturn(issues);
 
-        assertThat(result).isEqualTo(1);
-        verify(projectIssueRepository, times(1)).deleteById(issue1.getId());
+        int deletedCount = projectIssueService.deleteByIds(issueIds);
+
+        assertThat(deletedCount).isEqualTo(2);
+        verify(projectIssueRepository, times(1)).deleteAll(issues);
     }
-
 }
